Add rough benefits panel

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="home-wrapper" [ngStyle]="{ 'background-image': 'url(\'assets/img/background.png\')' }">
   <nz-content>
     <app-hero></app-hero>
+    <app-benefit-panel></app-benefit-panel>
   </nz-content>
 </div>
