Add basic home components

--- a/src/app/modules/home/components/benefit-panel/benefit-panel.component.html
+++ b/src/app/modules/home/components/benefit-panel/benefit-panel.component.html
@@ -17,5 +17,11 @@
     </div>
     <span class="label">Free</span>
   </div>
+  <div class="item">
+    <div class="icon">
+      <span nz-icon nzType="heart" nzTheme="fill"></span>
+    </div>
+    <span class="label">Free</span>
+  </div>
 
 </div>
