--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -2,5 +2,7 @@
   <nz-content>
     <app-hero></app-hero>
     <app-benefit-panel></app-benefit-panel>
+    <app-features></app-features>
+    <app-banner></app-banner>
   </nz-content>
 </div>
