--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,60 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Rubik&display=swap');
+
+nz-content {
+  padding: 50px 100px;
+  min-height: calc(100vh - 65px) !important;
+}
+
+* {
+  font-family: 'Rubik', sans-serif;
+  font-size: 16px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  font-family: 'Playfair Display', serif;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 26px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+p {
+  color: #343434;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+
+  .close {
+    font-size: 16px;
+    cursor: pointer;
+  }
+}
+
+button {
+  font-weight: bold;
+}
+
+nz-header {
+  height: 80px !important;
+  padding: 0px 100px !important;
+  border-bottom: 2px solid #f1f8ff;
+}
