--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-wrapper" [ngStyle]="{ 'background-image': 'url(\'assets/img/background.png\')' }">
-  <nz-content>
+  <nz-content [style]="{ 'background': '#fff'}">
     <app-hero></app-hero>
     <app-benefit-panel></app-benefit-panel>
     <app-features></app-features>
