--- a/src/theme.less
+++ b/src/theme.less
@@ -9,4 +9,4 @@
  @primary-color: #00A9C8;
  @layout-header-background: #fff;
 @border-radius-base: 0;
-@layout-body-background: #fff;
+@layout-body-background: #f1f8ff;
