--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Rubik:wght@400;500;600;700&display=swap');
 
 nz-content {
   padding: 50px 100px;
@@ -8,7 +8,6 @@ nz-content {
 
 * {
   font-family: 'Rubik', sans-serif;
-  font-size: 16px;
 }
 
 h1,
@@ -22,7 +21,7 @@ h6 {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 36px;
 }
 
 h2 {
@@ -34,7 +33,8 @@ h3 {
 }
 
 p {
-  color: #343434;
+  color: #757575;
+  font-size: 16px;
 }
 
 .modal-header {
@@ -57,4 +57,38 @@ nz-header {
   height: 80px !important;
   padding: 0px 100px !important;
   border-bottom: 2px solid #f1f8ff;
+}
+
+.reduced {
+  max-width: 990px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  justify-content: center;
+}
+
+.center {
+  height: calc(100vh - 250px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.background {
+  background-repeat: no-repeat;
+  background-position-x: -100px;
+  background-position-y: -100px;
+}
+
+nz-upload {
+  width: 100% !important;
+}
+
+.ant-upload.ant-upload-drag {
+  width: 100% !important;
+  background: #f1f8ff !important;
+  border: 2px dashed #f1f8ff !important;
+  border-radius: 20px !important;
 }
