Create basic file-manager UI

--- a/src/app/modules/home/components/benefit-panel/benefit-panel.component.html
+++ b/src/app/modules/home/components/benefit-panel/benefit-panel.component.html
@@ -3,25 +3,30 @@
     <div class="icon">
       <span nz-icon nzType="lock" nzTheme="fill"></span>
     </div>
-    <span class="label">100% Secure</span>
+    <div class="info">
+      <span class="label">Decentralized</span>
+      <p>Take control of your files with our decentralized file sharing platform. Say goodbye to reliance on centralized
+        platforms and enjoy enhanced security and privacy.</p>
+    </div>
   </div>
   <div class="item">
     <div class="icon">
       <span nz-icon nzType="compass" nzTheme="fill"></span>
     </div>
-    <span class="label">Decentralised</span>
+    <div class="info">
+      <span class="label">Accessible Anywhere</span>
+      <p>Access your files anytime, anywhere, without limitations. Our app enables seamless file access across all your
+        devices, so you can stay productive on the go.</p>
+    </div>
   </div>
   <div class="item">
     <div class="icon">
       <span nz-icon nzType="heart" nzTheme="fill"></span>
     </div>
-    <span class="label">Free</span>
-  </div>
-  <div class="item">
-    <div class="icon">
-      <span nz-icon nzType="heart" nzTheme="fill"></span>
+    <div class="info">
+      <span class="label">Free of Charge</span>
+      <p>Enjoy the benefits of decentralized file sharing at no cost. Our app provides a free and open platform for you
+        to share and distribute your files without any subscription fees or hidden charges.</p>
     </div>
-    <span class="label">Free</span>
   </div>
-
 </div>
