--- a/src/app/modules/home/components/features/features.component.html
+++ b/src/app/modules/home/components/features/features.component.html
@@ -1,7 +1,10 @@
 <div class="features">
-  <h1>Features</h1>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla laudantium quam aut, ut eos corporis placeat itaque
-    perferendis accusamus, explicabo quis a doloribus magni, voluptatum pariatur. Aspernatur porro laudantium dicta!</p>
+  <h1>Why Choose Our Platform</h1>
+  <p>Discover the powerful features of our platform that make file sharing and collaboration seamless. Experience secure
+    and efficient file transfers, decentralized storage, fast transfer speeds, expiration dates for shared files, a
+    user-friendly interface, and all of this for free. Join us today and revolutionize the way you share and manage your
+    files.</p>
+
   <div nz-row nzGutter="35" class="items">
     <div nz-col nzXs="2" nzSm="4" nzMd="6" nzLg="8" nzXl="8" *ngFor="let item of items">
       <div class="item">
