--- a/src/app/modules/home/components/hero/hero.component.html
+++ b/src/app/modules/home/components/hero/hero.component.html
@@ -1,12 +1,13 @@
 <div class="hero-wrapper">
   <div class="left">
-    <span class="title">learn from anywhere.</span>
+    <span class="title">Take control of your file sharing.</span>
     <span class="header">
-      Share files like never before
+      Share and collaborate with ease.
     </span>
-    <p class="text">Lorem ipsum. Aut cum tenetur vitae voluptatem iusto modi. Sunt praesentium est sed facilis aliquid
-      minima et quo.
-    </p>
+    <p class="text">Experience the power of decentralized file sharing with our app. Gain full control over your files
+      and share them effortlessly with others, all without relying on centralized platforms. Whether you're a student,
+      professional, or passionate creator, our app empowers you to securely share, collaborate, and access your files
+      anytime, anywhere.</p>
     <button nz-button nzType="primary" nzSize="large">Get Started</button>
   </div>
   <img class="main" src="assets/img/main.png" alt="">
