--- a/src/app/modules/home/components/hero/hero.component.scss
+++ b/src/app/modules/home/components/hero/hero.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 35px;
+  margin-bottom: 70px;
 
   .left {
     display: flex;
@@ -14,6 +14,7 @@
       margin-bottom: 10px;
       font-size: 17px;
       color: #00A9C8;
+      font-weight: bold;
     }
 
     .header {
@@ -21,10 +22,15 @@
       font-family: 'Playfair Display', serif;
       margin-bottom: 15px;
       line-height: 100px;
+      color: #19506E;
     }
 
     .text {
       font-size: 18px;
     }
+  }
+
+  .main {
+    width: 50%;
   }
 }
