--- a/src/theme.less
+++ b/src/theme.less
@@ -10,3 +10,6 @@
  @layout-header-background: #fff;
 @border-radius-base: 0;
 @layout-body-background: #f1f8ff;
+@heading-color: #19506E;
+@text-color: #AFC2CD;
+@layout-footer-background: #00A9C8;
