--- a/src/app/modules/home/components/banner/banner.component.html
+++ b/src/app/modules/home/components/banner/banner.component.html
@@ -1,6 +1,6 @@
 <div class="banner">
-  <h1>Get started sharing files today!</h1>
-  <p>Lorem ipsum. Aut cum tenetur vitae voluptatem iusto modi. Sunt praesentium est sed facilis aliquid minima et quo.
-  </p>
+  <h1>Start sharing files today!</h1>
+  <p>Experience the power of decentralized file sharing and enjoy seamless collaboration and secure file access. Join
+    our community of users and revolutionize the way you share and distribute files.</p>
   <button nz-button nzType="primary" nzSize="large">Get Started</button>
 </div>
