--- a/src/app/modules/home/components/features/features.component.scss
+++ b/src/app/modules/home/components/features/features.component.scss
@@ -1,5 +1,5 @@
 .item {
-  margin-bottom: 35px;
+  margin-top: 35px;
 
   .icon {
     color: #01a9c9;
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 17.5px;
     border-radius: 10px;
   }
 }
