Add ability to send, receive and show in relevant file managers

--- a/src/app/modules/my-files/pages/my-files/my-files.component.html
+++ b/src/app/modules/my-files/pages/my-files/my-files.component.html
@@ -1,4 +1,18 @@
 <nz-content>
   <app-page-header [header]="header" [description]="description"></app-page-header>
-  <app-file-row></app-file-row>
+  <app-file-row *ngFor="let file of files" [file]="file"></app-file-row>
+  <div class="empty-wrapper" *ngIf="files && files.length === 0">
+    <nz-empty nzNotFoundImage="https://gw.alipayobjects.com/zos/antfincdn/ZHrcdLPrvN/empty.svg"
+      [nzNotFoundContent]="contentTpl" [nzNotFoundFooter]="footerTpl">
+      <ng-template #contentTpl>
+        <h2>No Files to Show</h2>
+        <span>
+          You haven't got any files yet, click the upload button below to add your first file.
+        </span>
+      </ng-template>
+      <ng-template #footerTpl>
+        <button nz-button nzType="primary">Send a file</button>
+      </ng-template>
+    </nz-empty>
+  </div>
 </nz-content>
