--- a/src/app/shared/components/file-row/file-row.component.scss
+++ b/src/app/shared/components/file-row/file-row.component.scss
@@ -4,6 +4,8 @@
   padding: 35px;
   display: flex;
   align-items: center;
+  box-shadow: 1px 0px 11px rgba(128, 128, 128, 0.0901960784);
+  margin-bottom: 35px;
 
   .left {
     .name {
