--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,3 +92,8 @@ nz-upload {
   border: 2px dashed #f1f8ff !important;
   border-radius: 20px !important;
 }
+
+.ant-modal {
+  width: 100% !important;
+  max-width: 800px !important;
+}
