--- a/src/app/shared/components/login-modal/login-modal.component.html
+++ b/src/app/shared/components/login-modal/login-modal.component.html
@@ -9,7 +9,10 @@
         temporibus commodi facilis doloremque aut cumque suscipit, nesciunt neque ipsa. Soluta molestiae corporis
         laudantium necessitatibus enim!</p>
       <div class="options">
-        <button class="metmask" (click)="connectMetamask()">Metamask</button>
+        <div class="login-option" (click)="connectMetamask()">
+          <img src="assets/img/metamask.png" alt="" srcset="">
+          <span >Login via <b>Metamask</b></span>
+        </div>
       </div>
     </div>
   </ng-template>
