--- a/src/app/modules/receive/pages/receive/receive.component.html
+++ b/src/app/modules/receive/pages/receive/receive.component.html
@@ -7,18 +7,17 @@
           <form #verificationForm="ngForm">
             <div class="verification-input">
               <input *ngFor="let digit of verificationCode; let i = index" nz-input type="text" class="digit"
-                [(ngModel)]="verificationCode[i]" name="digit{{ i + 1 }}" maxlength="1" (paste)="onPaste($event)"
+                [(ngModel)]="verificationCode[i]" name="digit{{ i + 1 }}" maxlength="1" (paste)="onPaste($event, i)"
                 (keydown)="onKeyDown($event, i)" #inputElement />
             </div>
           </form>
         </div>
         <button nz-button nzType="primary" nzSize="large" [disabled]="!isFormFilled()" (click)="submitForm()">Submit
           Code</button>
-
       </div>
-      <nz-alert nzType="info" nzMessage="To access your files later, you can sign in via Metamask, it's free!" nzShowIcon></nz-alert>
+      <nz-alert nzType="info" nzMessage="To access your files later, you can sign in via Metamask, it's free!"
+        nzShowIcon></nz-alert>
     </div>
-
   </nz-content>
 </div>
 <app-file-modal [showModal]="showFileModal" (modalClosed)="toggleFileModal()" [file]="file"></app-file-modal>
