--- a/src/app/shared/components/code-modal/code-modal.component.scss
+++ b/src/app/shared/components/code-modal/code-modal.component.scss
@@ -6,17 +6,23 @@
   font-size: 36px;
   width: 57px;
   margin: 10.5px;
-  ;
+  text-transform: uppercase;
 }
 
 .code {
   display: flex;
   justify-content: center;
   margin-bottom: 15px;
+  margin: auto;
 }
 
 .copy {
   margin: auto;
   display: block;
   margin-top: 15px;
+}
+
+.verification-input {
+  display: flex;
+  justify-content: center;
 }
