Add media query for home page

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -15,7 +15,7 @@
           <a routerLink="/my-files" routerLinkActive="active">My Files</a>
         </li>
         <li *ngIf="connectedAddress">
-          <a routerLink="/shared-files" routerLinkActive="active">Shared with Me</a>
+          <a routerLink="/shared-files" routerLinkActive="active">Shared</a>
         </li>
       </ul>
     </div>
