--- a/src/app/modules/home/components/hero/hero.component.html
+++ b/src/app/modules/home/components/hero/hero.component.html
@@ -1,9 +1,9 @@
 <div class="hero-wrapper" >
   <div class="left">
     <span class="title">Take control of your file sharing.</span>
-    <span class="header">
-      Share and collaborate with ease.
-    </span>
+  <span class="header">
+      Lightning-fast file sharing at your fingertips!
+  </span>
     <p class="text">Experience the power of decentralized file sharing with our app. Gain full control over your files
       and share them effortlessly with others, all without relying on centralized platforms. Whether you're a student,
       professional, or passionate creator, our app empowers you to securely share, collaborate, and access your files
