--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -18,7 +18,7 @@ nz-header {
     ul {
       list-style: none;
       padding: 0;
-      display: flex;
+      display: inline-flex;
       margin: 0;
       font-size: 17px;
 
