--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -28,7 +28,7 @@
         </a>
         <nz-dropdown-menu #menu="nzDropdownMenu">
           <ul nz-menu nzSelectable>
-            <li nz-menu-item (click)="disconnectWallet()">Disconnect</li>
+            <li nz-menu-item (click)="disconnectWallet()">Sign Out</li>
           </ul>
         </nz-dropdown-menu>
       </div>
