--- a/src/app/modules/home/components/hero/hero.component.scss
+++ b/src/app/modules/home/components/hero/hero.component.scss
@@ -7,7 +7,10 @@
   .left {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    text-align: center;
+    max-width: 800px;
+    margin: auto;
 
     .title {
       text-transform: uppercase;
