Update CSS & Copy

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -9,8 +9,8 @@
       <a href="#">Cookie Policy</a>
     </div>
     <div class="footer-info">
-      <p>&copy; 2023 Your Company. All rights reserved.</p>
-      <p>Trademarks and logos are the property of their respective owners.</p>
+      <p>&copy; 2023 Coldshare.</p>
+      <p>All rights reserved.</p>
     </div>
   </div>
 </nz-footer>
