--- a/src/app/modules/home/components/hero/hero.component.scss
+++ b/src/app/modules/home/components/hero/hero.component.scss
@@ -7,7 +7,10 @@
   .left {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    text-align: center;
+    max-width: 800px;
+    margin: auto;
 
     .title {
       text-transform: uppercase;
@@ -18,7 +21,7 @@
     }
 
     .header {
-      font-size: 100px;
+      font-size: 90px;
       font-family: 'Playfair Display', serif;
       margin-bottom: 15px;
       line-height: 100px;
