--- a/src/app/modules/home/pages/home/home.component.scss
+++ b/src/app/modules/home/pages/home/home.component.scss
@@ -2,4 +2,6 @@
   background-repeat: no-repeat;
   background-position-y: -55px;
   background-position-x: -30px;
+  background-color: white;
+  width: -webkit-fill-available;
 }
