--- a/src/app/shared/components/file-row/file-row.component.html
+++ b/src/app/shared/components/file-row/file-row.component.html
@@ -1,10 +1,10 @@
 <div class="file-row" *ngIf="file">
   <div class="left">
-    <img class="icon" src="assets/img/file-icons/pdf.png" alt="">
+    <img class="icon" [src]="getFileIcon(file.format)" alt="">
     <span class="name">{{ file.name }}</span>
   </div>
   <span class="date">
-    {{ file.createdAt }}
+    {{ getFormattedDate() }}
   </span>
   <div class="options">
     <span nz-icon nzType="download" nzTheme="outline" (click)="download()"></span>
