--- a/src/app/modules/send/pages/send/send.component.html
+++ b/src/app/modules/send/pages/send/send.component.html
@@ -5,7 +5,7 @@
       <nz-upload nzType="drag" [nzMultiple]="false" [nzFileList]="fileList" [nzAction]="uploadUrl" (nzChange)="handleChange($event)" nzShowUploadList="false">
         <div class="upload-wrapper">
           <span>Drag and Drop your file or</span>
-          <button nz-button nzType="default">Browse</button>
+          <button nz-button nzType="primary">Browse</button>
         </div>
       </nz-upload>
     </div>
