--- a/src/app/modules/home/components/banner/banner.component.html
+++ b/src/app/modules/home/components/banner/banner.component.html
@@ -2,5 +2,5 @@
   <h1>Start sharing files today!</h1>
   <p>Experience the power of decentralized file sharing and enjoy seamless collaboration and secure file access. Join
     our community of users and revolutionize the way you share and distribute files.</p>
-  <button nz-button nzType="primary" nzSize="large">Get Started</button>
+  <button nz-button nzType="primary" routerLink="/send" nzSize="large">Send a File</button>
 </div>
