--- a/src/app/modules/home/components/hero/hero.component.html
+++ b/src/app/modules/home/components/hero/hero.component.html
@@ -8,6 +8,6 @@
       and share them effortlessly with others, all without relying on centralized platforms. Whether you're a student,
       professional, or passionate creator, our app empowers you to securely share, collaborate, and access your files
       anytime, anywhere.</p>
-    <button nz-button nzType="primary" nzSize="large">Get Started</button>
+    <button nz-button nzType="primary" routerLink="/send" nzSize="large">Send a File</button>
   </div>
 </div>
