--- a/src/app/modules/home/components/benefit-panel/benefit-panel.component.html
+++ b/src/app/modules/home/components/benefit-panel/benefit-panel.component.html
@@ -4,9 +4,11 @@
       <span nz-icon nzType="lock" nzTheme="fill"></span>
     </div>
     <div class="info">
-      <span class="label">Decentralized</span>
-      <p>Take control of your files with our decentralized file sharing platform. Say goodbye to reliance on centralized
-        platforms and enjoy enhanced security and privacy.</p>
+      <span class="label">Enhanced Security and Privacy</span>
+      <p>Take control of your files with Coldshare's decentralized file sharing platform. By eliminating reliance on
+        centralized platforms, you can enjoy enhanced security and privacy. Your files are securely stored and
+        transferred using Cold Stack's robust technology, ensuring that only you and your intended recipients have
+        access to them.</p>
     </div>
   </div>
   <div class="item">
@@ -14,9 +16,11 @@
       <span nz-icon nzType="compass" nzTheme="fill"></span>
     </div>
     <div class="info">
-      <span class="label">Accessible Anywhere</span>
-      <p>Access your files anytime, anywhere, without limitations. Our app enables seamless file access across all your
-        devices, so you can stay productive on the go.</p>
+      <span class="label">Seamless Access Anywhere</span>
+      <p>Access your files anytime, anywhere, and across all your devices with Coldshare. Our app provides a seamless
+        file access experience, allowing you to stay productive even while on the go. Whether you're using a computer,
+        smartphone, or tablet, you can easily and quickly retrieve your files without any limitations or restrictions.
+      </p>
     </div>
   </div>
   <div class="item">
@@ -24,9 +28,10 @@
       <span nz-icon nzType="heart" nzTheme="fill"></span>
     </div>
     <div class="info">
-      <span class="label">Free of Charge</span>
-      <p>Enjoy the benefits of decentralized file sharing at no cost. Our app provides a free and open platform for you
-        to share and distribute your files without any subscription fees or hidden charges.</p>
+      <span class="label">Anonymous File Transfer</span>
+      <p>Enjoy the benefits of anonymous file sharing with Coldshare. Our platform prioritizes your privacy by ensuring
+        that your identity remains anonymous during file transfers. You can securely send and receive files without
+        revealing personal information, giving you peace of mind and control over your digital footprint.</p>
     </div>
   </div>
 </div>
