CSS& Copy Updates

--- a/src/app/modules/send/pages/send/send.component.html
+++ b/src/app/modules/send/pages/send/send.component.html
@@ -9,7 +9,7 @@
         </div>
       </nz-upload>
     </div>
-    <nz-alert nzType="info" nzMessage="Login to upload multiple files at once and save your files to share later!"
+    <nz-alert nzType="info" nzMessage="Login to store your files for longer, your files will be deleted after 24 hours if you're not logged in."
       nzShowIcon></nz-alert>
   </div>
 </nz-content>
