--- a/src/app/modules/shared-files/pages/shared-files/shared-files.component.html
+++ b/src/app/modules/shared-files/pages/shared-files/shared-files.component.html
@@ -11,7 +11,7 @@
         </span>
       </ng-template>
       <ng-template #footerTpl>
-        <button nz-button nzType="primary" nzSize="large" routerLink="/send">Receive a file</button>
+        <button nz-button nzType="primary" nzSize="large" routerLink="/receive">Receive a file</button>
       </ng-template>
     </nz-empty>
   </div>
