Remove background image

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home-wrapper" [ngStyle]="{ 'background-image': 'url(\'assets/img/background.png\')' }">
+<div class="home-wrapper">
   <nz-content >
     <app-hero></app-hero>
     <app-benefit-panel></app-benefit-panel>
