--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -4,9 +4,9 @@
       <img routerLink="/" src="assets/img/logo-white.png" alt="Logo">
     </div>
     <div class="footer-links">
-      <a href="#">Terms of Service</a>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Cookie Policy</a>
+      <a routerLink="/terms">Terms of Service</a>
+      <a routerLink="/privacy">Privacy Policy</a>
+      <a routerLink="/cookies">Cookie Policy</a>
     </div>
     <div class="footer-info">
       <p>&copy; 2023 Coldshare.</p>
