--- a/src/app/shared/components/login-modal/login-modal.component.html
+++ b/src/app/shared/components/login-modal/login-modal.component.html
@@ -5,9 +5,7 @@
         <h2>Connect your Wallet</h2>
         <i nz-icon (click)="handleClose()" class="close" nzType="close" nzTheme="outline"></i>
       </div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae molestias fugit ex, recusandae excepturi
-        temporibus commodi facilis doloremque aut cumque suscipit, nesciunt neque ipsa. Soluta molestiae corporis
-        laudantium necessitatibus enim!</p>
+      <p>Securely connect your wallet to access all the features.</p>
       <div class="options">
         <div class="login-option" (click)="connectMetamask()">
           <img src="assets/img/metamask.png" alt="" srcset="">
